:sparkles: Add transitionFlipFromLeft AtoView To 2

--- a/tabbedAppSample/Base.lproj/Main.storyboard
+++ b/tabbedAppSample/Base.lproj/Main.storyboard
@@ -105,15 +105,31 @@
                                     <action selector="ShowActionController:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="mfA-MJ-fpU"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Osb-4H-oPW">
+                                <rect key="frame" x="193" y="615" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Info"/>
+                                <connections>
+                                    <action selector="showInfo:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="eSG-Mg-APu"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H0Y-T3-EI0">
+                                <rect key="frame" x="68" y="368" width="281" height="223"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
+                    <connections>
+                        <outlet property="baseView" destination="H0Y-T3-EI0" id="fVH-KZ-Dzn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="748" y="259"/>
+            <point key="canvasLocation" x="747.82608695652175" y="258.48214285714283"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
